@@ -1,3 +1,8 @@
+2016-10-04 Albert Chu <chu11@llnl.gov>
+
+	* ipmi-oem/: Audit and fix, add +1 to string buffers, use
+	secure_memset when appropriate.
+
 2016-10-03 Albert Chu <chu11@llnl.gov>
 
 	* libfreeipmi/fru/ipmi-fru-data.c: Remove unnecessary memsets. 
